@@ -7,10 +7,17 @@ description="Pack and unpack .mpa files. An .mpa file is a plain-text file which
 license="GPLv3"
 repository="https://github.com/Marko-Vujnovic/marko_plaintext_archive"
 
+#[patch.crates-io]
+#yaml-rust = { git = "ssh://git@github.com/blicksyne/yaml-rust" }
+
 [dependencies]
 async-process = "1.3.0"
 futures-util = "0.3.21"
-serde_json = "1.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = {version = "1.0"}
+serde_yaml = { version = "0.8" }
+#serde_macros = "*"
+yaml-rust = { git = "ssh://git@github.com/blicksyne/yaml-rust" }
 terminal-menu = "2.0.2"
 # marko_fs_types = { path = "./libs/marko_fs_types" }
 marko_fs_types = { git = "ssh://git@github.com/Marko-Vujnovic/marko_fs_types", rev = "c0ccd3c" }
@@ -18,10 +25,6 @@ marko_fs_types = { git = "ssh://git@github.com/Marko-Vujnovic/marko_fs_types", r
 [dependencies.reqwest]
 features = ["stream"]
 version = "0.11"
-
-[dependencies.serde]
-features = ["derive"]
-version = "1"
 
 [dependencies.tokio]
 features = ["full"]
