@@ -1,7 +1,7 @@
 // use super::to_String::{to_String, osstrref_to_String};
 use super::to_String::*;
 
-pub fn pack(folder_to_pack:&std::path::PathBuf) -> Result<marko_fs_types::Folder, std::io::Error> {
+pub fn pack(folder_to_pack:&std::path::PathBuf) -> core::result::Result<marko_fs_types::Folder, std::io::Error> {
     let mut root_folder = marko_fs_types::Folder{name:to_String(&folder_to_pack), subfolders: vec![], files: vec![]};
 
     for dir_entry in std::fs::read_dir(folder_to_pack).unwrap() { let dir_entry = dir_entry?; let path = dir_entry.path();
